--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-fileupload": "^1.1.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-dropzone": "^10.2.1",
     "react-scripts": "3.2.0"
   },
   "scripts": {
